--- a/index.html
+++ b/index.html
@@ -7,7 +7,22 @@
     <link rel="stylesheet" href="./public/css/app.css">
 </head>
 <body>
+    <!-- Créer partie, faire responsive et commit -->
     
+    <!-- Header -->
+    <header>
+        <div class="container">
+            <div class="row justify-content-center border-bottom">
+                <h1 class="p-4">Victory</h1>
+            </div>
+            <div class="row d-flex justify-content-center justify-content-md-around p-4">
+                <a href="" class="mx-5 mx-md-2 my-1">HOME</a>
+                <a href="" class="mx-5 mx-md-2 my-1">OUR MENUS</a>
+                <a href="" class="mx-5 mx-md-2 my-1">BLOG ENTRIES</a>
+                <a href="" class="mx-5 mx-md-2 my-1">CONTACT US</a>
+            </div>
+        </div>
+    </header>
 
 
 
