header corrigé + section1 début

--- a/index.html
+++ b/index.html
@@ -15,16 +15,26 @@
             <div class="row justify-content-center border-bottom">
                 <h1 class="p-4">Victory</h1>
             </div>
-            <div class="row d-flex justify-content-center justify-content-md-around p-4">
-                <a href="" class="mx-5 mx-md-2 my-1">HOME</a>
-                <a href="" class="mx-5 mx-md-2 my-1">OUR MENUS</a>
-                <a href="" class="mx-5 mx-md-2 my-1">BLOG ENTRIES</a>
-                <a href="" class="mx-5 mx-md-2 my-1">CONTACT US</a>
+            <div class="row d-flex justify-content-lg-center justify-content-md-around justify-content-center p-4">
+                <a href="" class="mx-lg-5 mx-md-2 mx-5 my-1">HOME</a>
+                <a href="" class="mx-lg-5 mx-md-2 mx-5 my-1">OUR MENUS</a>
+                <a href="" class="mx-lg-5 mx-md-2 mx-5 my-1">BLOG ENTRIES</a>
+                <a href="" class="mx-lg-5 mx-md-2 mx-5 my-1">CONTACT US</a>
             </div>
         </div>
     </header>
 
-
+    <!-- Section 1 : Asian Restaurant -->
+    <section>
+        <div class="contenu1 row d-flex w-100">
+            <div class="texte1 justify-content-center">
+                <span>HERE YOU CAN FIND DELECIOUS FOODS</span>
+                <h1 class="py-2">ASIAN RESTAURANT</h1>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laboriosam et repellat consectetur veniam ratione? Libero ullam facere fugit non ad aut autem.</p>
+                <button class="my-4">ORDER RIGHT NOW</button>
+            </div>
+        </div>
+    </section>
 
 
     <!-- Jquery -->
